--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,123 +1,224 @@
 ---
+import { ViewTransitions} from 'astro:transitions';
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Button from '../components/Button.astro';
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<svg
-			class="astro-a"
-			width="495"
-			height="623"
-			viewBox="0 0 495 623"
-			fill="none"
-			xmlns="http://www.w3.org/2000/svg"
-			aria-hidden="true"
-		>
-			<path
-				fill-rule="evenodd"
-				clip-rule="evenodd"
-				d="M167.19 364.254C83.4786 364.254 0 404.819 0 404.819C0 404.819 141.781 19.4876 142.087 18.7291C146.434 7.33701 153.027 0 162.289 0H332.441C341.703 0 348.574 7.33701 352.643 18.7291C352.92 19.5022 494.716 404.819 494.716 404.819C494.716 404.819 426.67 364.254 327.525 364.254L264.41 169.408C262.047 159.985 255.147 153.581 247.358 153.581C239.569 153.581 232.669 159.985 230.306 169.408L167.19 364.254ZM160.869 530.172C160.877 530.18 160.885 530.187 160.894 530.195L160.867 530.181C160.868 530.178 160.868 530.175 160.869 530.172ZM136.218 411.348C124.476 450.467 132.698 504.458 160.869 530.172C160.997 529.696 161.125 529.242 161.248 528.804C161.502 527.907 161.737 527.073 161.917 526.233C165.446 509.895 178.754 499.52 195.577 500.01C211.969 500.487 220.67 508.765 223.202 527.254C224.141 534.12 224.23 541.131 224.319 548.105C224.328 548.834 224.337 549.563 224.347 550.291C224.563 566.098 228.657 580.707 237.264 593.914C245.413 606.426 256.108 615.943 270.749 622.478C270.593 621.952 270.463 621.508 270.35 621.126C270.045 620.086 269.872 619.499 269.685 618.911C258.909 585.935 266.668 563.266 295.344 543.933C298.254 541.971 301.187 540.041 304.12 538.112C310.591 533.854 317.059 529.599 323.279 525.007C345.88 508.329 360.09 486.327 363.431 457.844C364.805 446.148 363.781 434.657 359.848 423.275C358.176 424.287 356.587 425.295 355.042 426.275C351.744 428.366 348.647 430.33 345.382 431.934C303.466 452.507 259.152 455.053 214.03 448.245C184.802 443.834 156.584 436.019 136.218 411.348Z"
-				fill="url(#paint0_linear_1805_24383)"></path>
-			<defs>
-				<linearGradient
-					id="paint0_linear_1805_24383"
-					x1="247.358"
-					y1="0"
-					x2="247.358"
-					y2="622.479"
-					gradientUnits="userSpaceOnUse"
-				>
-					<stop stop-opacity="0.9"></stop>
-					<stop offset="1" stop-opacity="0.2"></stop>
-				</linearGradient>
-			</defs>
-		</svg>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
-</Layout>
+
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Portafolio John Berroa</title>
+	<ViewTransitions/>
+</head>
 
 <style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		width: 800px;
-		max-width: calc(100% - 2rem);
-		color: white;
-		font-size: 20px;
-		line-height: 1.6;
+	.nemp {
+border-radius: 18px;
+background: #000814;
+box-shadow: inset 7px 7px 3px #000308,
+            inset -7px -7px 3px #000d20;
 	}
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
-	}
-	h1 {
-		font-size: 4rem;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
-	}
-	.link-card-grid {
+
+	.card{
+		background-color: blue;
 		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
+		place-content: center;
+		font-size: 1.3rem;
+		border: solid .2rem #fff;
+		border-radius: 10px;
 	}
+
+	.list__skill{
+		display: flex;
+		width: 100%;
+		justify-content: space-between ;
+		justify-items: center;
+		font-size: 1rem;
+
+	}
+
+
+	
 </style>
+
+
+<!-- body -->
+<body  class="bg-secundary__black font-roboto text-white__text"  >
+	
+	
+	<!-- div grid container -->
+	<div 
+		class=" container
+		 w-full h-[100vh] grid  grid-flow-row gap-3 p-4 pt-7  m-auto
+		lg:grid-cols-6 
+		md:grid-cols-4 
+		" >
+			 
+		<!-- user info -->
+		<div class="  nemp 
+		  lg:col-span-4 
+		  md:col-span-6  p-4 flex flex-col md:flex-row   ">
+		  
+		  <div class="md:w-[18rem] min-h[18rem]  relative ">
+			<picture class=" ">
+			<img class="w-full h-auto rounded-3xl  lg:absolute bottom-0" 
+					srcset="/john_berroa.png 2x, /john_berroa-mobile.png 1x " 
+					alt="John Berroa ">
+			</picture>
+		  </div>
+	
+		  <!-- card user -->
+			<div class=" 
+			max-w-96 m-auto
+			md:w-[40em]  
+			">
+				<p  class=" min-[320px]:h-auto  text-[1.5rem] text-balance
+								md:min-w-[23rem] min-[768px]:h-76" >
+					<span class="font-gothic font-thin  text-4xl tracking-wider text-primary__yellow ">John Berroa </span>
+					  <img  class="w-8 h-auto rounded-full inline-block mb-2 mr-4" src="/1.jpg" alt="logo job"> 
+					   👍 Soy  front-end devolver en proceso, enfocado en desarrollar productos
+					   digitales de alta calidad. <span class="hidden md:block">Que satisfagan las necesidades reales de los clientes.</span>
+				</p>
+
+			</div>
+		 </div>
+
+		<!-- user proyect -->
+		  <div class="
+		 	min-h-52
+		   nemp md:col-span-2
+		   flex flex-col justify-center gap-2 
+		    items-center p-4 relative overflow-hidden
+		  ">
+		  <div class="absolute top-0 left-0 w-full h-full opacity-50 ">
+			<video src="/bg-video.mp4" loop autoplay></video>
+		  </div>
+
+		  <div class="flex flex-col justify-center items-center h-80  z-10">
+			
+			<h2 class="text-6xl text-opacity-40xl font-gothic tracking-wide uppercase mb-1
+			md:text-6xl">Proyectos</h2>
+				<a transition:name="project"  href="/proyectos" class="text-6xl hover:cursor-pointer  
+				 " >
+					<i class='bx bxl-codepen'></i></a>
+		  </div>
+
+		  </div>
+
+		  <!-- user social -->
+		  <div class=" 
+		  nemp flex justify-center items-center md:col-span-6 row-start-5 
+		  lg:row-start-2"> 
+
+		<div  class="flex flex-col  p-3 gap-2  max-w-[1200px]
+		  md:justify-between md:items-center  md:w-[30em]  
+		  lg:flex-row lg:w-[60em]   ">
+		   <Button href="mailto: johnbdesing@gmail.com" title="Charlemos" icon="bx bxl-gmail" ></Button>
+			<Button   href="https://github.com/johnb03" title="Github " icon="bx bxl-github" ></Button>
+			<Button  href="https://www.linkedin.com/in/john-ernesto-berroa-marten-bb14789a/" title="Linkedin" icon="bx bxl-linkedin-square"></Button>
+			<Button  href="https://www.instagram.com/jobdesingrd?igsh=MXRiZjJtZW95NWo2bg==" title="Instagram" icon="bx bxl-instagram"></Button>
+		</div>
+
+		</div>
+		
+		
+		  <!-- user Curriculum -->
+		<div 
+		class=" nemp
+		md:col-span-2 
+		 min-h-52 " >
+
+		 <div class="w-full h-full flex flex-col items-center justify-center gap-3  ">
+		
+			<h2 class="
+			text-4xl
+			font-gothic
+			tracking-wide
+			uppercase">Curriculum vitae</h2>
+
+			 <Button
+			   href="https://drive.google.com/file/d/1puSOs7uV74F4-eNrij8jYww33z9jY24n/view?usp=sharing" title="Download"
+			   icon="bx bxs-down-arrow-circle" >
+			</Button>
+
+		 </div>
+
+      </div>
+    
+	<!-- user tools -->
+	  <div  
+	  class=" nemp 
+	   md:col-span-4 lg:min-h-72  ">
+		<div class=" w-full grid md:grid-cols-5 col-cols-1  justify-center  text-center gap-5 p-3">
+
+			<div class="md:col-span-2">
+				<h2 class="font-gothic text-2xl uppercase tracking-wider ">
+					Skills <i class='bx bx-edit text-primary__yellow lg:text-3xl'  ></i>
+				</h2>
+					<ul class="flex w-full  items-center text-[.8] 
+					 flex-col md:text-[.9rem]  
+					   ">
+						<li>Diseño de layout</li>
+						<li>Diseño de iconos</li>
+						<li>Programacion</li>
+						<li>Comunicacion </li>
+						<li>trabajo en Equipo </li>
+						<li>Adaptabilidad</li>
+						<li>Empatia </li>
+						<li>Creatividad </li>
+						<li> voluntad de aprender </li>
+					</ul>
+			</div>
+	
+		  <div class="md:col-span-1  ">
+			<h2 class="font-gothic text-2xl uppercase tracking-wider lg:pt-2  lg:text-2xl">
+				Front-end <i class='bx bx-layer text-primary__yellow'></i></h2>
+				<ul class="flex w-full justify-between items-center text-2xl md:flex-col lg:text-3xl ">
+					<li><i class='bx bxl-html5' ></i></li>
+					<li><i class='bx bxl-css3' ></i></li>
+					<li><i class='bx bxl-javascript' ></i></li>
+					<li><i class='bx bxl-tailwind-css' ></i></li>
+					<li><svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.972 3.483c.163.196.247.46.413.987L19.025 16a15.5 15.5 0 0 0-4.352-1.42l-2.37-7.723a.31.31 0 0 0-.296-.213a.31.31 0 0 0-.295.214L9.37 14.576A15.5 15.5 0 0 0 5 15.998l3.657-11.53c.168-.527.251-.79.415-.986c.144-.172.331-.306.544-.388C9.858 3 10.143 3 10.715 3h2.612c.572 0 .858 0 1.1.094c.213.082.4.217.545.39M9 18c0 1.5 2 3 3 4c1-1 3-3 3-4q-3 1.5-6 0"/></svg></li>
+				</ul>
+		</div>
+
+		  <div class="md:col-span-1 ">
+			<h2 class="font-gothic text-2xl uppercase tracking-wider ">
+				Devs tools <i class='bx bxs-keyboard text-primary__yellow lg:text-3xl' ></i></h2>
+				<ul class="flex w-full justify-between text-2xl md:flex-col  lg:text-3xl">
+					<li><i class='bx bx-terminal'></i></li>
+					<li><i class='bx bxl-markdown' ></i></i></li>
+					<li><i class='bx bxl-visual-studio' ></i></li>
+					<li><i class='bx bxl-firebase' ></i></li>
+					<li><i class='bx bxl-figma' ></i></li>
+					<li><i class='bx bxl-git' ></i></li>
+				</ul>
+		</div>
+
+		  <div class="md:col-span-1">
+			<h2 class="font-gothic text-2xl uppercase tracking-wider ">
+				aprendiendo <i class='bx bx-edit text-primary__yellow lg:text-3xl'  ></i></h2>
+				<ul class="flex w-full justify-between text-2xl md:flex-col  lg:text-3xl">
+					<li><i class='bx bxl-javascript' ></i></li>
+					<li><i class='bx bxl-react' ></i></li>
+					<li><i class='bx bxl-nodejs' ></i></li>
+					<li><i class='bx bx-data' ></i></li>
+				</ul>
+		</div>
+		
+		  
+	</div>
+	</div>
+	</div>
+</body>
+
+</html>
+
