--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -21,7 +21,7 @@ import Card from '../components/cardProyects.astro';
     <section  id="Proyectos-layaout">
 
         <div class="w-full p-3  ">
-            <a transition:name="project" href="/"  class="text-8xl"><i class='bx bxl-codepen'></i></a>
+            <a transition:name="project" href="/portafolio-John-Berroa"  class="text-8xl"><i class='bx bxl-codepen'></i></a>
         </div>
         
         <div class="w-full flex justify-center">
@@ -37,7 +37,7 @@ import Card from '../components/cardProyects.astro';
                     subtitle='Proyecto Real'
                     icons={["bx bxl-html5", "bxl-css3","bx bxl-javascript", "bx bxl-tailwind-css", "bx bxl-firebase" ]}
                     description="Cotizador de picaderas para eventos "
-                    imgSrc='/piccola-torta.jpg'
+                    imgSrc='/portafolio-John-Berroa/piccola-torta.jpg'
                     href="https://piccola-torta.web.app/index.html";
              />
 
@@ -46,7 +46,7 @@ import Card from '../components/cardProyects.astro';
                     subtitle='Practica'
                     icons={["bx bxl-html5", "bxl-css3","bx bxl-javascript", "bx bxl-tailwind-css",]}
                     description="Landig para una barberia "
-                    imgSrc='/Evolve.jpg'
+                    imgSrc='/portafolio-John-Berroa/Evolve.jpg'
                     href="https://dashing-scone-868014.netlify.app/";
              />
 
@@ -55,7 +55,7 @@ import Card from '../components/cardProyects.astro';
                     subtitle='Practica '
                     icons ={["bx bxl-html5", "bxl-css3","bx bxl-javascript"]}
                     description="Landig para servicio tecnico "
-                    imgSrc='/Bootis-tec.jpg'
+                    imgSrc='/portafolio-John-Berroa/Bootis-tec.jpg'
                     href="https://charming-sorbet-061cc0.netlify.app/";
              />
 
@@ -64,7 +64,7 @@ import Card from '../components/cardProyects.astro';
                     subtitle='Practica'
                     icons ={["bx bxl-html5", "bxl-css3","bx bxl-javascript"]}
                     description="Landig para IA"
-                    imgSrc='/serenade.jpg'
+                    imgSrc='/portafolio-John-Berroa/serenade.jpg'
                     href="https://playful-kashata-de27b3.netlify.app";
              />
 
