enlace de CV y skills

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -144,7 +144,7 @@ box-shadow: inset 7px 7px 3px #000308,
 			uppercase">Curriculum vitae</h2>
 
 			 <Button
-			   href="https://drive.google.com/file/d/1puSOs7uV74F4-eNrij8jYww33z9jY24n/view?usp=sharing" title="Download"
+			   href="https://drive.google.com/file/d/1HyivDd6MjnKvr65YHFLwrMzfdOQtGgnQ/view?usp=sharing" title="Download"
 			   icon="bx bxs-down-arrow-circle" >
 			</Button>
 
@@ -165,10 +165,10 @@ box-shadow: inset 7px 7px 3px #000308,
 					<ul class="flex w-full  items-center text-[.8] 
 					 flex-col md:text-[.9rem]  
 					   ">
-						<li>Diseño de layout</li>
-						<li>Diseño de iconos</li>
-						<li>Programacion</li>
-						<li>Comunicacion </li>
+						<li>Diseño en Figma</li>
+						<li>wordpres</li>
+						<li>CEO</li>
+						<li>Comunicacion</li>
 						<li>trabajo en Equipo </li>
 						<li>Adaptabilidad</li>
 						<li>Empatia </li>
