--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,6 @@ interface Props {
 	title: string;
 }
 
-import { ViewTransitions} from 'astro:transitions';
 const { title } = Astro.props;
 ---
 
@@ -16,9 +15,8 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
-		<ViewTransitions/>
+		<title>{title}</title>
 	</head>
-	<body>
 		<slot />
 	</body>
 </html>
