reparacion de enlaces de proyecto

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -107,16 +107,18 @@ box-shadow: inset 7px 7px 3px #000308,
 			
 			<h2 class="text-6xl text-opacity-40xl font-gothic tracking-wide uppercase mb-1
 			md:text-6xl">Proyectos</h2>
-				<button
+
+			<a transition:name="project"  
+				href="/portafolio-John-Berroa/proyectos" 
+				class="text-6xl hover:cursor-pointer   " >
+				<button 
 				  class=" pt-2 pb-2 pl-10 pr-10
              	 bg-primary__yellow rounded-2xl
             	  text-secundary__black shadow-lg 
-		 		 font-semibold  active:scale-[0.8] ">
-				<a transition:name="project"  
-				href="/portafolio-John-Berroa/proyectos" 
-				class="text-6xl hover:cursor-pointer   " >
-				<i class='bx bxl-codepen'></i></a>
-					</button>	
+		 		 font-semibold  active:scale-[0.8]  text-6xl">
+				<i class='bx bxl-codepen'></i>
+			</button>	
+		</a>
 					
 
 				
