--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -21,15 +21,16 @@ import Card from '../components/cardProyects.astro';
 <body class="bg-secundary__black font-roboto text-white__text ">
     <section  id="Proyectos-layaout">
 
-        
-          <div  class="w-full p-3"  >
+        <div  class="w-full p-3"  >
+              <a transition:name="project" href="/portafolio-John-Berroa" >
               <button 
               class=" pt-2 pb-2 pl-10 pr-10
               bg-primary__yellow rounded-2xl
               text-secundary__black shadow-lg 
-		 	 font-semibold  active:scale-[0.8] ">
-              <a transition:name="project" href="/portafolio-John-Berroa"  class="text-8xl"><i class='bx bxl-codepen'></i></a>
+		 	 font-semibold  active:scale-[0.8]  text-8xl">
+             <i class='bx bxl-codepen'></i>
             </button>
+            </a>
         </div>
         
       
