--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -111,7 +111,7 @@ box-shadow: inset 7px 7px 3px #000308,
 			<a transition:name="project"  
 				href="/portafolio-John-Berroa/proyectos" 
 				class="text-6xl hover:cursor-pointer   " >
-				<button 
+				<button aria-label="proyects"
 				  class=" pt-2 pb-2 pl-10 pr-10
              	 bg-primary__yellow rounded-2xl
             	  text-secundary__black shadow-lg 
@@ -134,10 +134,10 @@ box-shadow: inset 7px 7px 3px #000308,
 		<div  class="flex flex-col  p-3 gap-2  max-w-[1200px]
 		  md:justify-between md:items-center  md:w-[30em]  
 		  lg:flex-row lg:w-[60em]   ">
-		   <Button href="mailto: johnbdesing@gmail.com" title="Charlemos" icon="bx bxl-gmail" ></Button>
-			<Button   href="https://github.com/johnb03" title="Github " icon="bx bxl-github" ></Button>
-			<Button  href="https://www.linkedin.com/in/john-ernesto-berroa-marten-bb14789a/" title="Linkedin" icon="bx bxl-linkedin-square"></Button>
-			<Button  href="https://www.instagram.com/jobdesingrd?igsh=MXRiZjJtZW95NWo2bg==" title="Instagram" icon="bx bxl-instagram"></Button>
+		   <Button  alabel="email" href="mailto: johnbdesing@gmail.com" title="Charlemos" icon="bx bxl-gmail" ></Button>
+			<Button alabel="git-hub" href="https://github.com/johnb03" title="Github " icon="bx bxl-github" ></Button>
+			<Button alabel="linkedin" href="https://www.linkedin.com/in/john-ernesto-berroa-marten-bb14789a/" title="Linkedin" icon="bx bxl-linkedin-square"></Button>
+			<Button alabel="instagram" href="https://www.instagram.com/jobdesingrd?igsh=MXRiZjJtZW95NWo2bg==" title="Instagram" icon="bx bxl-instagram"></Button>
 		</div>
 
 		</div>
@@ -157,7 +157,7 @@ box-shadow: inset 7px 7px 3px #000308,
 			tracking-wide
 			uppercase">Curriculum vitae</h2>
 
-			 <Button
+			 <Button alabel="curriculum"
 			   href="https://drive.google.com/file/d/1HyivDd6MjnKvr65YHFLwrMzfdOQtGgnQ/view?usp=sharing" title="Download"
 			   icon="bx bxs-down-arrow-circle" >
 			</Button>
