--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -21,7 +21,7 @@ import Card from '../components/cardProyects.astro';
 <body class="bg-secundary__black font-roboto text-white__text ">
     <section  id="Proyectos-layaout">
 
-        <div  class="w-full p-3"  >
+        <div aria-label="portafolio" class="w-full p-3"  >
               <a transition:name="project" href="/portafolio-John-Berroa" >
               <button 
               class=" pt-2 pb-2 pl-10 pr-10
