actualizacion de proyectos

--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -78,6 +78,14 @@ import Card from '../components/cardProyects.astro';
                     imgSrc='/portafolio-John-Berroa/serenade.jpg'
                     href="https://playful-kashata-de27b3.netlify.app";
              />
+            <Card
+                    title="Ice juices" 
+                    subtitle='Proyecto real'
+                    icons ={["bx bxl-html5", "bxl-css3","bx bxl-javascript"]}
+                    description="Proyecto de marca"
+                    imgSrc='/portafolio-John-Berroa/icejuice.jpg'
+                    href="https://icejuices.com/";
+             />
 
         </div>
     </section>
