--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,21 +4,22 @@ interface Props {
 }
 
 const { title } = Astro.props;
+const BASE = (import.meta.env.BASE_URL || '/').replace(/\/?$/, '/');
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-		<title>{title}</title>
-	</head>
-		<slot />
-	</body>
+ 	<head>
+ 		<meta charset="UTF-8" />
+ 		<meta name="description" content="Astro description" />
+ 		<meta name="viewport" content="width=device-width" />
+		<link rel="icon" href={BASE + 'favicon.ico'} />
+ 		<meta name="generator" content={Astro.generator} />
+ 		<title>{title}</title>
+ 	</head>
+ 	<body>
+ 		<slot />
+ 	</body>
 </html>
 <style is:global>
 	:root {
