--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,16 @@
 ---
 import { ViewTransitions} from 'astro:transitions';
 import Button from '../components/Button.astro';
+const BASE = (import.meta.env.BASE_URL || '/').replace(/\/?$/, '/');
 ---
+
 
 
 <!DOCTYPE html>
 <html lang="es">
 <head>
 <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-<link rel="shortcut icon" href="/mi-repo/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href={BASE + 'favicon.ico'} type="image/x-icon">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
@@ -69,11 +71,11 @@ box-shadow: inset 7px 7px 3px #000308,
 		  md:col-span-6  p-4 flex flex-col md:flex-row   ">
 		  
 		  <div class="md:w-[18rem] min-h[18rem]  relative ">
-			<picture class=" ">
+			<div class="glitch-container ">
 			<img class="w-full h-auto rounded-3xl  lg:absolute bottom-0" 
-					srcset="/portafolio-John-Berroa/John-Berroa.png 2x, /portafolio-John-Berroa/John-Berroa.png 1x " 
+					srcset={BASE + ' wanted-john.svg 2x, ' + BASE + 'wanted-john.svg 1x'} 
 					alt="John Berroa ">
-			</picture>
+			</div>
 		  </div>
 	
 		  <!-- card user -->
@@ -81,10 +83,10 @@ box-shadow: inset 7px 7px 3px #000308,
 			max-w-96 m-auto
 			md:w-[40em]  
 			">
-				<p  class=" min-[320px]:h-auto  text-[1.5rem] text-balance
-								md:min-w-[23rem] min-[768px]:h-76" >
-					<span class="font-gothic font-thin  text-4xl tracking-wider text-primary__yellow ">John Berroa </span>
-					   👍 Soy  front-end devolver en proceso, enfocado en desarrollar productos
+				<p  class=" min-[320px]:h-auto  text-[1.3rem] text-balance
+								md:min-w-[23rem] min-[768px]:h-76" > Soy
+					<span class="font-gothic font-semibold  text-3xl tracking-widest text-primary__yellow">John Berroa </span>
+					   👍 Estudiante de Ingenieria de sofware,  front-end devolver, enfocado en desarrollar productos
 					   digitales de alta calidad. <span class="hidden md:block">Que satisfagan las necesidades reales de los clientes.</span>
 				</p>
 
@@ -100,7 +102,7 @@ box-shadow: inset 7px 7px 3px #000308,
 		    items-center p-4 relative overflow-hidden
 		  ">
 		  <div  class="absolute top-0 left-0 w-full h-full opacity-50 ">
-			<video src="/portafolio-John-Berroa/bg-video.mp4"  autoplay muted loop ></video>
+			<video src={BASE + 'bg-video.mp4'}  autoplay muted loop ></video>
 		  </div>
 
 		  <div class="flex flex-col justify-center items-center h-80  z-10">
