imagen de proyecto piccola agregado

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -160,7 +160,7 @@ box-shadow: inset 7px 7px 3px #000308,
 			uppercase">Curriculum vitae</h2>
 
 			 <Button alabel="curriculum"
-			   href="https://drive.google.com/file/d/1HyivDd6MjnKvr65YHFLwrMzfdOQtGgnQ/view?usp=sharing" title="Download"
+			   href="https://www.canva.com/design/DAGU4npu6uk/l2VDMzZhKLEBDq0G4f7KLA/view?utm_content=DAGU4npu6uk&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h0e3355441c" title="Download"
 			   icon="bx bxs-down-arrow-circle" >
 			</Button>
 
