--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -183,13 +183,14 @@ box-shadow: inset 7px 7px 3px #000308,
 					   ">
 						<li>Diseño en Figma</li>
 						<li>wordpres</li>
-						<li>CEO</li>
+						<li>SEO</li>
+						<li>Control de versiones</li>
 						<li>Comunicacion</li>
 						<li>trabajo en Equipo </li>
 						<li>Adaptabilidad</li>
 						<li>Empatia </li>
 						<li>Creatividad </li>
-						<li> voluntad de aprender </li>
+						<li>voluntad de aprender </li>
 					</ul>
 			</div>
 	
